# Simple-Agent-Memory

./: .gitignore  README.md  pyproject.toml
src/simple_agent_memory/: __init__.py  llm.py  maintenance.py  memory.py  retrieval.py  short_term.py  tool_instructions.py  types.py
src/simple_agent_memory/llm_clients/: __init__.py  anthropic.py  embeddings.py  gemini.py  lmstudio.py  ollama.py  openai.py  openrouter.py  xai.py
src/simple_agent_memory/long_term/: __init__.py  file_memory.py  graph_memory.py
src/simple_agent_memory/prompts/: __init__.py  classification.py  conflict.py  extraction.py  retrieval.py  summarization.py
src/simple_agent_memory/storage/: __init__.py  base.py  sqlite_store.py
src/simple_agent_memory/vector/: __init__.py  base.py  numpy_store.py
tests/: conftest.py  test_file_memory.py  test_graph_memory.py  test_maintenance.py  test_memory.py  test_retrieval.py  test_semantic_retrieval.py  test_short_term.py  test_storage.py  test_tool_mode.py
tests/live_test/: conftest.py  llm_sim.py  test_live_file_mode.py  test_live_graph_mode.py  test_live_judge.py
tests/live_test/live_test_mock_data/: personal_assistant_conversations.json  relationship_graph_conversations.json
